--- a/Tests/Routindo.Plugins.Serialization.Tests/Routindo.Plugins.Serialization.Tests.csproj
+++ b/Tests/Routindo.Plugins.Serialization.Tests/Routindo.Plugins.Serialization.Tests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\..\Source\Routindo.Plugins.Template.Components\Routindo.Plugins.Template.Components.csproj" />
+		<ProjectReference Include="..\..\Source\Routindo.Plugins.Serialization.Components\Routindo.Plugins.Serialization.Components.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
