--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<Company>Company Name</Company>
 		<Authors>Author Name</Authors>
-		<Product>Routindo 21 - Plugin Template</Product>
+		<Product>Routindo 21 - Plugin IO</Product>
 		<Copyright>Copyright © 2021 - All rights reserved</Copyright>
 		<VersionPrefix>1.0.0</VersionPrefix>
 		<!--<VersionSuffix>alpha</VersionSuffix>-->
