--- a/Source/Routindo.Plugins.Serialization.UI.Preview/Routindo.Plugins.Serialization.UI.Preview.csproj
+++ b/Source/Routindo.Plugins.Serialization.UI.Preview/Routindo.Plugins.Serialization.UI.Preview.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Routindo.Plugins.Template.UI\Routindo.Plugins.Template.UI.csproj" />
+    <ProjectReference Include="..\Routindo.Plugins.Serialization.UI\Routindo.Plugins.Serialization.UI.csproj" />
   </ItemGroup>
 
   <ItemGroup>
