--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
 	<PropertyGroup>
-		<Company>Company Name</Company>
-		<Authors>Author Name</Authors>
-		<Product>Routindo 21 - Plugin IO</Product>
+		<Company>Routindo</Company>
+		<Authors>Younes CHEIKH</Authors>
+		<Product>Routindo 21 - Serialization Plugin</Product>
 		<Copyright>Copyright © 2021 - All rights reserved</Copyright>
 		<VersionPrefix>1.0.0</VersionPrefix>
 		<!--<VersionSuffix>alpha</VersionSuffix>-->
