--- a/Source/Routindo.Plugins.Serialization.UI/Routindo.Plugins.Serialization.UI.csproj
+++ b/Source/Routindo.Plugins.Serialization.UI/Routindo.Plugins.Serialization.UI.csproj
@@ -5,6 +5,8 @@
 		<UseWPF>true</UseWPF>
 		<UseWindowsForms>true</UseWindowsForms>
 		<LangVersion>latest</LangVersion>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
 	<ItemGroup>
