--- a/Source/Routindo.Plugins.Serialization/Routindo.Plugins.Serialization.csproj
+++ b/Source/Routindo.Plugins.Serialization/Routindo.Plugins.Serialization.csproj
@@ -2,6 +2,8 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0-windows</TargetFramework>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
 
 	<ItemGroup>
